samples/_failures_safe/1761269472_95c57f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb55d97b.c: In function ‘main’:
./samples/SAFE/__tmp_fb55d97b.c:165:24: error: missing terminating " character
  165 |                 printf("WORD '%s
      |                        ^~~~~~~~~
./samples/SAFE/__tmp_fb55d97b.c:165:17: error: expected expression at end of input
  165 |                 printf("WORD '%s
      |                 ^~~~~~
./samples/SAFE/__tmp_fb55d97b.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb55d97b.c:165:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb55d97b.c:165:17: error: expected declaration or statement at end of input
